--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
 
   <app-auth />
 
-  @if (isAdmin()) {
+ <!-- @if (isAdmin()) {
   <p>Only Admins can see this</p>
-  }
+} -->
+<p appAuth="'admin" [userType]="'admin'">Only Admins can see this</p>
 </main>
