--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,19 @@
  <!-- @if (isAdmin()) {
   <p>Only Admins can see this</p>
 } -->
-<p appAuth="'admin" [userType]="'admin'">Only Admins can see this</p>
+<!-- <p *ngIf="isAdmin()">Only Admins can see this</p> -->
+<!-- <ng-template appAuth="admin">
+  <p>Only Admins can see this</p>
+</ng-template> -->
+
+<p *appAuth="'admin'" class="protected-content admin">
+  Only Admins can see this
+</p>
+<p *appAuth="'user'" class="protected-content authenticated">
+  Regular users shoud see this
+</p> 
+<p *appAuth="'guest'" class="protected-content authenticated">
+  Guest users should see this
+</p>
+
 </main>
